.k8s/overlays/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fluent-bit
---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
