.k8s/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
spec:
  rules:
    - host: "hello-openobserve.localhost.com"
      http:
        paths:
          - path: /app/(api)(\/.*)
            pathType: Prefix
            backend:
              service:
                name: app-api
                port:
                  number: 8080
